--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,70 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.noteCard{
-  margin: 10px 0px;
+body {
+  background-image: url("Images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.icons{
+.websiteHeading {
+  text-align: center;
+  font-weight: bolder;
+  color: black;
+  margin-top: 50px;
+}
+
+.websitetext {
+  font-weight: 600;
+  color: black;
+  font-size: 19px;
+  text-align: justify;
+  line-height: 1.6;
+}
+
+.loginForm {
+  background: #000000e3;
+  margin: 10px 20px;
+  padding: 20px;
+  border-radius: 15px;
+  color: white;
+}
+
+.noteCard {
+  margin: 10px 0px;
+  border: 2px solid black;
+  box-shadow: 0px 5px 0px 0px black;
+
+  transform: scale(1.025);
+}
+
+.icons {
   cursor: pointer;
 }
 
-#root{
+#root {
   margin-bottom: 100px;
+}
+
+.noteField {
+  border: 2px solid black;
+  box-shadow: 0px 5px 0px 0px black;
+}
+
+.addNoteBtn {
+  box-shadow: 0px 5px 0px 0px black;
+  width: 40%;
+  height: 50px;
+  opacity: 1;
 }
