--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,13 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-body {
   background-image: url("Images/background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   opacity: 1;
 }
 
 .websiteHeading {
   text-align: center;
   font-weight: bolder;
-  color: black;
+  color: rgb(55, 44, 44);
   margin-top: 50px;
 }
 
@@ -57,6 +42,10 @@ body {
   margin-bottom: 100px;
 }
 
+#websiteContent{
+  margin-top: 70px;
+}
+
 .noteField-signup,.noteField-note {
   border: 2px solid black;
   box-shadow: 0px 5px 0px 0px black;
@@ -88,4 +77,23 @@ body {
   height: 50px;
   width: 50%;
   margin-top: 30px;
+}
+
+.textData{
+  font-size: 18px;
+  font-weight: 600;
+}
+
+#myAlert{
+  position: absolute;
+  width: 100%;
+}
+
+.tags{
+  background-color: orange;
+  border-radius: 10px;
+}
+
+.noteTitle{
+  word-wrap: anywhere;
 }
